Battery mechanic fully implemented

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url('../images/space-bg.jpg') no-repeat center center / cover;
+  background: url("../images/space-bg.jpg") no-repeat center center / cover;
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -7,10 +7,10 @@ body {
 }
 
 .container {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   justify-content: center;
-  padding-top: 60px;
+  padding-top: 20px;
   position: relative;
   z-index: 100;
 }
@@ -31,7 +31,7 @@ body {
   box-sizing: border-box;
   color: rgba(255, 255, 255, 0.7);
   font-family: Arial, sans-serif;
-  height: 640px;
+  height: 580px;
   padding: 32px;
   max-width: 350px;
 }
